# auto-circuit

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  Dockerfile  README.md  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  poetry.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
.measurement_cache/: token_pos_exp_1.pkl  token_pos_tree_patch_2.pkl
.prune_scores_cache/: IOI-ACDC-prune-scores.pkl  IOI-Subnetwork-Edge-Probing-Dropout-05-Epochs-800.pkl  IOI-Subnetwork-Edge-Probing-prune-scores.pkl  prune_scores_dict-28-08-2023_22-37-19.pkl  prune_scores_dict-28-08-2023_23-38-19.pkl  prune_scores_dict-30-08-2023_17-44-01.pkl
assets/: particles.json
auto_circuit/: data.py  experiment_utils.py  experiments.py  language_rotations.py  playground.py  prune.py  pythia-2.8b-sports.py  run_experiments.py  tasks.py  tracr_experiments.py  types.py  uniqueness_experiments.py  utils.py  visualize.py
auto_circuit/metrics/: ROC.py  answer_diff.py  answer_diff_percent.py  answer_prob.py  answer_value.py  area_under_curve.py  avoid_edges.py  kl_div.py  metrics.py  prune_scores_similarity.py
auto_circuit/model_utils/: autoencoder_transformer.py  micro_model_utils.py  sparse_autoencoder.py  tracr_model_utils.py  transformer_lens_utils.py
auto_circuit/prune_algos/: ACDC.py  activation_magnitude.py  circuit_probing.py  edge_attribution_patching.py  ground_truth.py  integrated_edge_attribution.py  integrated_edge_gradients.py  mask_gradient.py  prune_algos.py  random_edges.py  simple_gradient.py  subnetwork_probing.py
auto_circuit/prune_functions/: ACDC.py  activation_magnitude.py  edge_attribution_patching.py  integrated_edge_attribution.py  integrated_edge_gradients.py  ioi_official.py  parameter_integrated_gradients.py  random_edges.py  simple_gradient.py  subnetwork_probing.py
auto_circuit/utils/: ablation_activations.py  custom_tqdm.py  graph_utils.py  misc.py  patch_wrapper.py  patchable_model.py  tensor_ops.py
datasets/: animal_diet_generator.py  animal_diet_long_prompts.json  animal_diet_prompts.json  animal_diet_short_prompts.json  capital_cities_generator.py  capital_cities_pythia-70m-deduped_prompts.json  docstring_generator.py  docstring_prompts.json  greater_than_generator.py  greater_than_gpt2-small_prompts.json  greaterthan_generator.py  greaterthan_gpt2-small_prompts.json  indirect_object_identification.json  ioi_generator.py  ioi_single_template_prompts.json  micro_model_input_generator.py  micro_model_inputs.json  micro_model_inputs_multiple_answers.json  mini_prompts.json
datasets/ioi/: ioi_ABBA_template_0_prompts.json  ioi_ABBA_template_10_prompts.json  ioi_ABBA_template_11_prompts.json  ioi_ABBA_template_12_prompts.json  ioi_ABBA_template_13_prompts.json  ioi_ABBA_template_14_prompts.json  ioi_ABBA_template_1_prompts.json  ioi_ABBA_template_2_prompts.json  ioi_ABBA_template_3_prompts.json  ioi_ABBA_template_4_prompts.json  ioi_ABBA_template_5_prompts.json  ioi_ABBA_template_6_prompts.json  ioi_ABBA_template_7_prompts.json  ioi_ABBA_template_8_prompts.json  ioi_ABBA_template_9_prompts.json  ioi_BABA_template_0_prompts.json  ioi_BABA_template_10_prompts.json  ioi_BABA_template_11_prompts.json  ioi_BABA_template_12_prompts.json  ioi_BABA_template_13_prompts.json  ioi_BABA_template_14_prompts.json  ioi_BABA_template_1_prompts.json  ioi_BABA_template_2_prompts.json  ioi_BABA_template_3_prompts.json  (+24 more)
docs/: index.md
experiments/: circuit_discovery.py  docstring_faithfulness.py  edge_vs_tree_patch.py  ioi_edge_based_faithfulness.py  ioi_node_based_faithfulness.py  ioi_optimized_circuit.py  learned_ioi_edges_all_toks.py  sports_players_probe.py  tracr-experiments.py
javascripts/: SmallPRNG.js  extra.js
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_data.py  test_experiment_utils.py  test_kl_vs_edges.py  test_prune.py  test_pruning.py  test_real_experiment.py
(+141 files in other folders)
