[tool.poetry]
name = "auto-circuit"
version = "0.1.0"
description = ""
authors = ["UFO-101 <josephmiller101@gmail.com>"]
readme = "README.md"
packages = [{include = "auto_circuit"}]

[tool.poetry.dependencies]
python = "~3.10"
torch = "^2.0.1"
einops = "^0.6.1"
transformer-lens = "^1.4.0"
pygraphviz = "^1.11"
ordered-set = "^4.1.0"
plotly = "^5.15.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ipykernel = "^6.25.0"
ipywidgets = "^8.1.0"
jupyter = "^1.0.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# pyflakes, pycodestyle, isort
select = ["F", "E", "W", "I001"]

[tool.pyright]
venvPath = "."
venv = ".venv"

reportMissingParameterType = true
reportUnknownParameterType = true
