[tool.poetry]
name = "auto-circuit"
version = "0.1.0"
description = ""
authors = ["UFO-101 <josephmiller101@gmail.com>"]
readme = "README.md"
packages = [{include = "auto_circuit"}]

[tool.poetry.dependencies]
python = "~3.10"
# This needs to be commented/uncommented until Poetry is fixed.
# Poetry can use system packages using 'virtualenvs.options.system-site-packages' in
# poetry.toml. This is useful because PyTorch is already installed on my devbox and
# installing with Poetry doesn't work. But it doesn't currently detect that torch is
# already installed and tries to install it anyway. TransformerLens has torch as dep.
# See: https://github.com/python-poetry/poetry/pull/8359
# Todo: Fix is merged, so delete this on next poetry release.
torch = "^2.0.1"
# Todo: Change this on next release of TransformerLens.
transformer-lens = {git = "https://github.com/UFO-101/TransformerLens.git@small-improvements"}
einops = "^0.6.1"
pygraphviz = "^1.11"
ordered-set = "^4.1.0"
plotly = "^5.15.0"
tqdm = {git = "https://github.com/UFO-101/tqdm.git"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ipykernel = "^6.25.0"
ipywidgets = "^8.1.0"
jupyter = "^1.0.0"
pytest = "^7.4.0"
pyright = "^1.1.326"
ipytest = "^0.13.3"
# torch-tb-profiler = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# pyflakes, pycodestyle, isort
select = ["F", "E", "W", "I001"]

[tool.pyright]
ignore = ["datasets/ioi_generator.py"]
reportMissingParameterType = true
reportUnknownParameterType = true

[tool.pytest.ini_options]
testpaths = ["tests"]
