[tool.poetry]
name = "auto-circuit"
version = "0.1.0"  # This isn't used. Version set during Github action.
description = ""
authors = ["UFO-101 <josephmiller101@gmail.com>"]
readme = "README.md"
packages = [{include = "auto_circuit"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.1"
transformer-lens = "^1.13.0"
einops = "^0.6.1"
ordered-set = "^4.1.0"
plotly = "^5.18.0"
kaleido = "0.2.1"  # Improved renderer for plotly
blobfile = "2.0.2"
word2word = "^1.0.0"
vscode-tqdm = "4.66.2"  # My fork of tqdm that works in VSCode
tracr-pypi = "1.0.0"  # My fork of tracr that is exactly the same (but on PyPI)

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ipykernel = "^6.25.0"
ipywidgets = "^8.1.0"
jupyter = "^1.0.0"
pytest = "^7.4.0"
pyright = "^1.1.350"
ipytest = "^0.13.3"
# torch-tb-profiler = "^0.4.1"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.17"
mkdocstrings = {extras = ["python"], version = "^0.24.3"}
mkdocs-gen-files = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# pyflakes, pycodestyle, isort
select = ["F", "E", "W", "I001"]

[tool.pyright]
ignore = ["datasets/ioi/ioi_generator.py", "datasets/greaterthan_generator.py", "datasets/docstring_generator.py"]
reportMissingParameterType = true
reportUnknownParameterType = true

[tool.pytest.ini_options]
testpaths = ["tests"]
